--- a/style.css
+++ b/style.css
@@ -18,7 +18,16 @@
 @media screen and (max-width: 800px){
     .grid {
         grid-template-columns: 100%;
-        grid-template-rows: repeat(4,500px);
+        grid-template-rows: repeat(4,360px);
+        gap: 0.5em;
+    
+    }
+}
+
+@media screen and (max-width: 500px) and (max-height: 800px){
+    .grid {
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(4,290px);
         gap: 0.5em;
     
     }
